feat: Implement commit message filtering with .xcommitignore support
- Added .xcommitignore file for defining patterns to ignore specific commit messages.
- Introduced IgnorePatternManager to manage and check ignore patterns.
- Updated CommitAnalyzerBot to skip analysis for messages matching ignore patterns.
- Enhanced README.md with instructions on using .xcommitignore for commit message filtering.

This feature allows users to customize which commit messages should be ignored during analysis, improving the relevance of the analyzed data.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ Thumbs.db
 .pytest_cache/
 .coverage
 htmlcov/
+.xcommitignore.test*
+test_ignore_patterns.py
 
 # Logs
 *.log
@@ -43,3 +45,4 @@ uv.lock
 TESTING.md
 SLACK_BOT.md
 CLAUDE.md
+.xcommitignore
